--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,68 @@
+@import-normalize;
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --mainBg: #ecf4ff;
+  --black: #000000;
+  --white: #ffffff;
+  --blue: #2569f6;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  background-color: var(--mainBg);
+  color: var(--black);
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+html {
+  box-sizing: border-box;
+  font-size: 0.833vw;
+  font-family: "Stolzl";
+  font-style: normal;
+  font-weight: 400;
+  height: 100%;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Stolzl";
+  text-decoration: none;
+  list-style: none;
+}
+img,
+video {
+  max-width: 100%;
+  height: auto;
+}
+/* ::-webkit-scrollbar {
+  width: 0.2em;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--gold);
+  border-radius: 0.2em;
+  transition: all 2s ease-in-out;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--secondary);
+  transition: all 2s ease-in-out;
+} */
+@font-face {
+  font-family: "Stolzl";
+  font-weight: 400;
+  src: local("Stolzl"), url(./assets/Fonts/stolz/StolzlRegular.otf);
+}
+@font-face {
+  font-family: "Stolzl";
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  src: local("Stolzl"), url(./assets/Fonts/stolz/StolzlMedium.otf);
 }
