--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -2,7 +2,15 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 3.333em 0 2.666em 0;
+  /* margin: 3.333em 0 2.666em 0; */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 2em 0;
+  background-color: var(--mainBg);
+  opacity: 0.9;
+  z-index: 1;
 }
 .logo {
   width: 13.58em;
