add footer, form section and start tax page

--- a/src/components/Introduction/introduction.module.css
+++ b/src/components/Introduction/introduction.module.css
@@ -2,9 +2,14 @@
   position: relative;
   margin-top: 6.67em;
 }
-.titleContainer {
+.titleContainer,
+.titleContainer2 {
   width: 81em;
   margin: 0 auto;
+}
+.titleContainer2 {
+  width: 70em;
+  margin-top: 6.67em;
 }
 .wrapper {
   display: flex;
