--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@
   --white: #ffffff;
   --blue: #2569f6;
   --blue2: #ddecff;
-  --blue3: #ddecff;
-  --blue4: #ddecff;
   --grey: #a2a2a2;
   --grey2: #d3d3d3;
   --grey3: #787878;
@@ -25,7 +23,6 @@ body {
     sans-serif;
   background-color: var(--mainBg);
   color: var(--black);
-  /* overflow-x: hidden; */
 }
 html,
 body {
@@ -42,6 +39,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Stolzl";
+  font-weight: 400;
   text-decoration: none;
   list-style: none;
 }
