--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,7 +1,8 @@
 footer,
 .list,
 .itemContact,
-.listLinks {
+.listLinks,
+.itemSocsals {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -43,4 +44,31 @@ footer,
 .itemLink:hover,
 .itemLink:focus {
   color: var(--blue);
+}
+
+@media (orientation: portrait) {
+  footer {
+    margin: 0 1.3em;
+  }
+  footer,
+  .listLinks,
+  .list {
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: unset;
+    margin-bottom: 1.58em;
+  }
+  .itemContact {
+    margin-bottom: 1.58em;
+  }
+  .listLinks {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .item:last-child {
+    border: none;
+  }
+  .rights {
+    order: 2;
+  }
 }
