--- a/src/components/Introduction/introduction.module.css
+++ b/src/components/Introduction/introduction.module.css
@@ -92,3 +92,20 @@
   font-size: 1.33em;
   line-height: 150%;
 }
+
+@media (orientation: portrait) {
+  .icon,
+  .cube {
+    display: none;
+  }
+  .titleContainer,
+  .titleContainer2 {
+    width: auto;
+  }
+  .imageContainer {
+    margin: 3.5em 0;
+  }
+  .list {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
