--- a/src/index.css
+++ b/src/index.css
@@ -48,19 +48,19 @@ video {
   max-width: 100%;
   height: auto;
 }
-/* ::-webkit-scrollbar {
-  width: 0.2em;
+::-webkit-scrollbar {
+  width: 0.3em;
 }
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--gold);
+  background-color: var(--blue);
   border-radius: 0.2em;
   transition: all 2s ease-in-out;
 }
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--secondary);
+/* ::-webkit-scrollbar-thumb:hover {
+  background-color: var(--black);
   transition: all 2s ease-in-out;
 } */
 @font-face {
@@ -72,4 +72,10 @@ video {
   font-family: "Stolzl";
   font-weight: 500;
   src: local("Stolzl"), url(./assets/Fonts/stolz/StolzlMedium.otf);
+}
+@media (orientation: portrait) {
+  html,
+  body {
+    font-size: 2.2vw;
+  }
 }
