--- a/src/components/RespGambling/respGambling.module.css
+++ b/src/components/RespGambling/respGambling.module.css
@@ -36,12 +36,14 @@
   width: 36.5em;
   transform: rotate(35deg);
   z-index: -1;
+  animation: levitate 12s ease-in-out alternate infinite;
 }
 .cube2 {
   position: absolute;
   bottom: -2em;
   right: -12.4em;
   width: 21em;
+  animation: levitate 8s ease-in-out alternate infinite;
 }
 .list {
   display: flex;
@@ -102,6 +104,7 @@
   right: 1em;
   width: 21.05em;
   z-index: -1;
+  animation: levitate 9s ease-in-out alternate infinite;
 }
 
 .infoContainer {
@@ -115,6 +118,16 @@
 }
 .boldText {
   font-weight: 500;
+}
+@keyframes levitate {
+  from {
+    transform: translate(0, 0);
+    rotate: -5deg;
+  }
+  to {
+    transform: translate(0.2em, 2em);
+    rotate: 2deg;
+  }
 }
 @media (orientation: portrait) {
   .container {
