--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --grey: #a2a2a2;
   --grey2: #d3d3d3;
   --grey3: #787878;
+  --red: #d10000;
 }
 body {
   margin: 0;
@@ -78,4 +79,8 @@ video {
   body {
     font-size: 2.2vw;
   }
+}
+.ReactFlagsSelect-module_selectValue__152eS {
+  padding: 0 !important;
+  margin: 0 !important;
 }
